working zoom and pan

--- a/index.html
+++ b/index.html
@@ -10,16 +10,9 @@
   <body>
 
     <div class="app">
-      <!--
-      <div class="menu">
-        <div class="main">
-          <div class="btn"></div>
-          <div class="btn"></div>  
-        </div>
-        <div class="side"></div>
-      </div> -->
-      <svg></svg>
-
+      <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+        <circle r="100" cx="639" cy="496" fill="red" />
+      </svg>
     </div>
 
     <script src="script.js"></script>
