--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 
     <div class="app">
       <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+        <rect fill="url(#Pattern)" stroke="black" width="1278" height="954" />
         <circle r="100" cx="639" cy="496" fill="red" />
+        <defs>      
+          <pattern id="Pattern" x="0" y="0" width=".25" height=".25">
+            <circle r="5" cx="5" cy="5" fill="grey" />
+          </pattern>
+        </defs>
+        
       </svg>
     </div>
 
